# fruitmarket

./: .coveragerc  .gitignore  LICENSE  README.md  code_of_conduct.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst
src/: __init__.py  __main__.py  data.csv  fruitmarket.py  sjebgjeg.ipynb
tests/: test_fruitmarket.py
