[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Market"
authors = [
    {name = "Shafanda Nabil Sembodo", email = "shafanda.nabil.s@gmail.com"},
]
description = Aplikasi dan pembelian buah
readme = "README.md"
# keywords = ["TODO_KEYWORD_1", "TODO_KEYWORD_2"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/fandanabil1379/fruitmarket"
"Bug Tracker" = "https://github.com/fandanabil1379/fruitmarket/issues"

[tool.setuptools.dynamic]
version = {attr = "fruitmarket.__version__"}
